fix(chatty): Spacing on stuff

--- a/src/main/post/post.css
+++ b/src/main/post/post.css
@@ -107,7 +107,9 @@ div.postBody a:hover {
 }
 .collapse {
     position: absolute;
-    top: 5px;
-    left: 5px;
+    top: 0;
+    left: 0;
     padding: 0;
+    margin-top: 4px;
+    margin-left: 5px;
 }
