--- a/src/main/replybox/replybox.css
+++ b/src/main/replybox/replybox.css
@@ -8,7 +8,7 @@
 
 .replybox-comment {
     background-color: #141414;
-    margin: -1px 0 3px 0;
+    margin: -4px 0 3px 0;
     border: 1px solid #666;
     position: relative;
     padding: 3px 0 25px 0;
@@ -30,7 +30,7 @@
 
 .replybox-close {
     position: absolute;
-    top: 5px;
+    top: 3px;
     left: 5px;
     padding: 0;
 }
